fix bugs sousgamme contact page

--- a/ldcfood_contact.html
+++ b/ldcfood_contact.html
@@ -92,7 +92,7 @@
                             </div>
                             <ul class="favoris-list">
                                 <li>
-                                    <input type="text" class="favoris-option width-dynamic" value="PoulePouletPouletPoulett - cuisse entière">
+                                    <input type="text" class="favoris-option width-dynamic" value="Poulet - cuisse entière - cuisse entière">
                                     <span class="del-btn"></span>
                                 </li>
                                 <li>
