--- a/ldcfood_contact_form-sent-success.html
+++ b/ldcfood_contact_form-sent-success.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="static-header">
+<body class="static-header form-sent-success">
     <div id="wrapper">
         <header id="header">
             <div class="container">
@@ -92,7 +92,7 @@
                             </div>
                             <ul class="favoris-list">
                                 <li>
-                                    <input type="text" class="favoris-option width-dynamic" value="Poulet - cuisse entière - cuisse entière" disabled>
+                                    <input type="text" class="favoris-option width-dynamic" value="Poulet - cuisse entière - cuisse entière">
                                     <span class="del-btn"></span>
                                 </li>
                                 <li>
