--- a/ldcfood_estampille.html
+++ b/ldcfood_estampille.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="static-header" style="background-image:url(assets/images/estampille-bg.png)">
+<body class="static-header">
     <div id="wrapper">
         <header id="header">
             <div class="container">
@@ -52,7 +52,7 @@
         </div>
         <main id="main">
             <div id="content">
-                <section class="mark-interactive">
+                <section class="mark-interactive" style="background-image:url(assets/images/estampille-bg-1.png)">
                     <div class="container">
                         <h2 class="h2 decoration">COMMENT LES DéCHIFFRER</h2>
                         <div class="interactive-holder">
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="default-section img-bg">
+                <section class="default-section img-bg" style="background-image:url(assets/images/estampille-bg-2.png)">
                     <div class="container">
                         <h2 class="h2 decoration">NOS ESTAMPILLES CE</h2>
                         <div class="text-image-box">
