gallery added 6th element

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -173,32 +173,11 @@
                             </div>
                             <div class="descr-box">
                                 <span class="country">
-                                        <img src="assets/images/flag-france.png" alt="France">
+                                        <img src="assets/images/gallery-parallax1.jpg" alt="image descriptin">
                                 </span>
                                 <div class="title-text">
-                                    <strong class="name">Pierre Lourat</strong>
-                                    <span class="position">Export France</span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div>
-                        <a class="video-link" data-fancybox data-src="#manager5-video" href="javascript:;">
-                            <div class="video-box">
-                                <video preload="auto" autoplay="false" muted>
-                                    <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
-                                    <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
-                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
-                                    <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
-                                </video>
-                            </div>
-                            <div class="descr-box">
-                                <span class="country">
-                                        <img src="assets/images/flag-france.png" alt="France">
-                                </span>
-                                <div class="title-text">
-                                    <strong class="name">Pierre Lourat</strong>
-                                    <span class="position">Export France</span>
+                                    <strong class="name">Manager</strong>
+                                    <span class="position">Positin</span>
                                 </div>
                             </div>
                         </a>
